--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "events": "^3.2.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
-    "react-native-azure-iotcentral-client": "^1.1.7",
+    "react-native-azure-iotcentral-client": "1.1.7",
     "react-native-ble-plx": "^2.0.0",
     "react-native-camera": "^3.18.0",
     "react-native-charts-wrapper": "^0.5.7",
@@ -54,7 +54,7 @@
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "fs": "^0.0.1-security",
-    "jest": "^25.1.0",
+    "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "16.11.0",
