--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@react-navigation/stack": "^5.2.19",
     "buffer": "^5.6.0",
     "events": "^3.2.0",
-    "react": "17.0.1",
-    "react-native": "^0.64.2",
+    "react": "^17.0.2",
+    "react-native": "^0.65.0-rc.4",
     "react-native-azure-iotcentral-client": "1.1.7",
     "react-native-ble-plx": "^2.0.0",
     "react-native-camera": "^3.18.0",
@@ -44,9 +44,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@types/react": "^16.14.5",
-    "@types/react-native": "^0.61.23",
+    "@react-native-community/eslint-config": "^3.0.0",
+    "@types/react": "^17.0.18",
+    "@types/react-native": "^0.64.13",
     "@types/react-native-charts-wrapper": "^0.5.0",
     "@types/react-native-linear-gradient": "^2.4.0",
     "@types/react-native-vector-icons": "^6.4.5",
@@ -55,7 +55,8 @@
     "eslint": "7.14.0",
     "fs": "^0.0.1-security",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "^0.66.2",
+    "react-native-codegen": "0.0.7",
     "react-native-svg-transformer": "^0.14.3",
     "react-test-renderer": "17.0.1",
     "typescript": "^3.8.2"
